Clean repository off unneccessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+#macOS stuff 
 .DS_Store
+
+#SwiftPM stuff
 /.build
 /Packages
 .swiftpm/
-.xcuserstate
+.resolved
+
+#XCode stuff
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
